Fix spacing for long pages titles in the side menu

--- a/src/views/CategoriesCarousel/style.scss
+++ b/src/views/CategoriesCarousel/style.scss
@@ -4,10 +4,11 @@
   height: 100vh;
 }
 
+.carousel-container .pusher,
 .carousel-container .slick-slider,
 .carousel-container .slick-list,
 .carousel-container .slick-track,
-.carousel-container div {
+.carousel-container .pusher div {
   height: 100%;
 }
 
